<?xml version="1.0"?>
<package format="3">
  <name>logger</name>
  <version>0.0.0</version>
  <description>Reusable lightweight logger for legged packages.</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
